add states logic
